# atol-qc-annotation

./: AGAT_CDSfilter.smk  CHANGELOG.md  README.md  busco.smk  pyproject.toml
atol_qc_annotation/: __main__.py  parse_omark_sum_file.py  plot_all_results.py
atol_qc_annotation/config/: containers.yaml
atol_qc_annotation/workflow/: Snakefile
atol_qc_annotation/workflow/rules/: agat.smk  busco.smk  convert_gff_to_gtf.smk  convert_gtf_to_gff.smk  extract_proteins.smk  omark.smk  utils.smk
extras/: Makefile  README.md  test_rgram.smk  test_rules.smk  tests.smk
extras/profiles/default/: config.v9+.yaml
results/: README.md  agat.stats  agat.stats.yaml  omark_summary.json  short_summary.specific.busco.json  short_summary.specific.busco.txt
test-data/: README.md
