[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["snakemake>=9.11.6,<10", "pandas>=2.3.3,<3"]
name = "atol-qc-annotation"
dynamic = ["version"]
description = "python3 wrapper for AToL annotation QC steps"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Tom Harrop", email = "tharrop@unimelb.edu.au" },
    { name = "Jane Tung", email = "jane.tung@uq.edu.au" },
]
requires-python = ">=3.12,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
atol-qc-annotation = "atol_qc_annotation.__main__:main"

[project.urls]
Homepage = "https://github.com/tomharrop/atol-qc-annotation"

[tool.setuptools]
packages = ["atol_qc_annotation"]

[tool.setuptools.package-data]
atol_qc_annotation = [
    "workflow/rules/agat.smk",
    "workflow/rules/busco.smk",
    "workflow/rules/convert_gff_to_gtf.smk",
    "workflow/rules/extract_proteins.smk",
    "workflow/rules/omark.smk",
    "workflow/rules/utils.smk",
    "workflow/Snakefile",
]

[tool.setuptools.exclude-package-data]
"*" = ["extras/*"]

[tool.setuptools_scm]
